syn-state-machine/src/impls/snapshots/syn_state_machine__impls__sum__tests__it_matches_sum_2_0.snap
---
source: syn-state-machine/src/impls/sum.rs
expression: "crate::parse::<Sum2<Ident, Punct>>(::quote::quote! { hello })"
---
Ok(
    (
        Val0(
            Ident(
                hello,
            ),
        ),
        0,
    ),
)
