syn-state-machine/src/impls/snapshots/syn_state_machine__impls__sum__tests__it_matches_sum_2_1.snap
---
source: syn-state-machine/src/impls/sum.rs
expression: "crate::parse::<Sum2<Ident, Punct>>(::quote::quote! { < })"
---
Ok(
    (
        Val1(
            Punct {
                char: '<',
                spacing: Alone,
            },
        ),
        0,
    ),
)
