syn-state-machine/src/impls/snapshots/syn_state_machine__impls__sum__tests__it_prioritizes_on_joint_match.snap
---
source: syn-state-machine/src/impls/sum.rs
expression: "crate::parse::<Sum2<FIdent<\"hello\">, Ident>>(::quote::quote! { hello })"
---
Ok(
    (
        Val0(
            FIdent(
                Ident(
                    hello,
                ),
            ),
        ),
        0,
    ),
)
